[gd_scene load_steps=6 format=3 uid="uid://c44n0gxwdlna2"]

[ext_resource type="Script" path="res://User Setting/Setting Menu.gd" id="1_3gyh6"]
[ext_resource type="FontFile" uid="uid://bmfcvw8qxy8b0" path="res://ThaleahFat.ttf" id="2_hpbea"]
[ext_resource type="Script" path="res://User Setting/Master Volume Slider.gd" id="3_l0500"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vcntd"]

[sub_resource type="Theme" id="Theme_h4kx1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -196.0
offset_right = 336.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gyh6")

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_unselected_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/drop_mark_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hpbea")
tab_alignment = 1
all_tabs_in_front = true
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="Game" type="TabBar" parent="MarginContainer/TabContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_unselected_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/drop_mark_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hpbea")
tab_alignment = 1

[node name="Master Volume" type="RichTextLabel" parent="MarginContainer/TabContainer/Game"]
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 113.0
offset_right = 112.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 4
theme_override_constants/line_separation = 0
theme_override_fonts/normal_font = ExtResource("2_hpbea")
theme_override_fonts/bold_font = ExtResource("2_hpbea")
theme_override_fonts/italics_font = ExtResource("2_hpbea")
theme_override_fonts/bold_italics_font = ExtResource("2_hpbea")
theme_override_fonts/mono_font = ExtResource("2_hpbea")
bbcode_enabled = true
text = "Master Volume
"
fit_content = true

[node name="Master Volume Slider" type="HSlider" parent="MarginContainer/TabContainer/Game"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 129.0
offset_right = 520.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
max_value = 1.0
step = 0.01
script = ExtResource("3_l0500")
bus_id = "Master"

[node name="Sound Effect Volume" type="RichTextLabel" parent="MarginContainer/TabContainer/Game"]
texture_filter = 1
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -27.5
offset_right = -148.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_hpbea")
text = "Sound Effects Volume
 
"
fit_content = true

[node name="SFX Slider" type="HSlider" parent="MarginContainer/TabContainer/Game"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -11.5
offset_right = 184.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
max_value = 1.0
step = 0.01
script = ExtResource("3_l0500")
bus_id = "SFX"

[node name="Music Volume" type="RichTextLabel" parent="MarginContainer/TabContainer/Game"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -111.5
offset_right = -216.0
offset_bottom = -81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_hpbea")
theme_override_fonts/bold_font = ExtResource("2_hpbea")
theme_override_fonts/italics_font = ExtResource("2_hpbea")
theme_override_fonts/bold_italics_font = ExtResource("2_hpbea")
theme_override_fonts/mono_font = ExtResource("2_hpbea")
bbcode_enabled = true
text = "Music Volume

"
fit_content = true

[node name="Music Slider" type="HSlider" parent="MarginContainer/TabContainer/Game"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -95.5
offset_right = 184.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
max_value = 1.0
step = 0.01
script = ExtResource("3_l0500")
bus_id = "Music"

[node name="V - Sync Enabler" type="CheckButton" parent="MarginContainer/TabContainer/Game"]
material = SubResource("CanvasItemMaterial_vcntd")
layout_mode = 1
anchors_preset = -1
anchor_right = 0.238
anchor_bottom = 0.089
offset_top = 1.0
offset_right = 2.064
offset_bottom = -0.129002
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hpbea")
text = "V-Sync Enabler"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Game"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.003
anchor_right = 0.543
anchor_bottom = 0.089
offset_top = -0.0830001
offset_right = 0.103973
offset_bottom = -0.129002
theme = SubResource("Theme_h4kx1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hpbea")
item_count = 4
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Maximized"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2
popup/item_3/text = "Exclusive Fullscreen"
popup/item_3/id = 3

[node name="Fps Enabler" type="CheckBox" parent="MarginContainer/TabContainer/Game"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.068
anchor_right = 0.159
anchor_bottom = 0.133
offset_top = -0.092001
offset_right = 0.151993
offset_bottom = -0.0769997
theme_override_fonts/font = ExtResource("2_hpbea")
text = "Display Fps"

[node name="Keyboard" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hpbea")
tab_alignment = 1

[node name="Controller" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hpbea")

[node name="Fps Display" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 69.0
offset_bottom = 16.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/normal_font = ExtResource("2_hpbea")
fit_content = true

[connection signal="value_changed" from="MarginContainer/TabContainer/Game/Master Volume Slider" to="MarginContainer" method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Game/Master Volume Slider" to="MarginContainer" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Game/SFX Slider" to="MarginContainer" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Game/Music Slider" to="MarginContainer" method="_on_music_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/TabContainer/Game/V - Sync Enabler" to="MarginContainer" method="_on_v__sync_enabler_toggled"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Game/OptionButton" to="MarginContainer" method="_on_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/TabContainer/Game/Fps Enabler" to="MarginContainer" method="_on_check_box_button_pressed"]
